--- a/index-ar.html
+++ b/index-ar.html
@@ -540,6 +540,7 @@
 
 
     <!-- Services Section with Dynamic Content -->
+
     <section id="services" class="py-20 bg-saudi-green-lighter islamic-pattern dynamic-section" data-dynamic-section="services">
         <div class="container mx-auto px-4">
             <div class="text-center mb-16" data-aos="fade-up">
@@ -558,7 +559,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Ministry-of-Municipal-and-Rural-Affairs-01.png" alt="خدمات البلدية" class="w-full h-full object-cover">
+                                <img src="./asstes/img/Ministry-of-Municipal-and-Rural-Affairs-01.png" alt="خدمات البلدية" class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -608,7 +609,7 @@
     <div class="card-content">
         <!-- Image -->
         <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-            <img src="./asstes/img/a-guarantee.png" alt="خدمات التأمين" class="w-full h-full object-cover" data-localized-img="./asstes/img/insurance">
+            <img src="./asstes/img/a-guarantee.png" alt="خدمات التأمين" class="w-full h-full object-contain" data-localized-img="./asstes/img/insurance">
         </div>
 
         <!-- Content -->
@@ -657,7 +658,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Najiz-1.png" alt="خدمات ناجز" class="w-full h-full object-cover" data-localized-img="./asstes/img/Najiz">
+                                <img src="./asstes/img/Najiz-1.png" alt="خدمات ناجز" class="w-full h-full object-contain" data-localized-img="./asstes/img/Najiz">
                             </div>
 
                             <!-- Content -->
@@ -701,13 +702,13 @@
                         </div>
                     </div>
 
-                    <!-- Card 2: خدمات مكتب العمل -->
+                    <!-- Card 4: خدمات مكتب العمل -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
                                 <img src="./asstes/img/human-resource.png" alt="خدمات مكتب العمل"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -754,12 +755,12 @@
                         </div>
                     </div>
 
-                    <!-- Card 3: خدمات منصة مدد -->
+                    <!-- Card 5: خدمات منصة مدد -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Mudad.png" alt="خدمات منصة مدد" class="w-full h-full object-cover">
+                                <img src="./asstes/img/Mudad.png" alt="خدمات منصة مدد" class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -805,7 +806,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 4: التأمينات الاجتماعية -->
+                    <!-- Card 6: التأمينات الاجتماعية -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -858,7 +859,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 5: خدمات الجوازات -->
+                    <!-- Card 7: خدمات الجوازات -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -912,7 +913,7 @@
                         </div>
                     </div>
 
-<!-- Card 6: خدمات الدفاع المدني -->
+<!-- Card 8: خدمات الدفاع المدني -->
 <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
     <div class="card-content">
         <!-- Image -->
@@ -965,13 +966,13 @@
 
           
 
-                    <!-- Card 8: خدمات وزارة التجارة -->
+                    <!-- Card 9: خدمات وزارة التجارة -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
                                 <img src="./asstes/img/Ministry-of-Commerce-1.png" alt="خدمات وزارة التجارة"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -1019,13 +1020,13 @@
                         </div>
                     </div>
 
-                    <!-- Card 9: خدمات مساند -->
+                    <!-- Card 10: خدمات مساند -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
                                 <img src="./asstes/img/Musaned- 01.png" alt="خدمات مساند"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -1072,13 +1073,13 @@
                         </div>
                     </div>
 
-                    <!-- Card 10: وزارة الاستثمار -->
+                    <!-- Card 11: وزارة الاستثمار -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
                                 <img src="./asstes/img/Investment.png" alt="وزارة الاستثمار"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -1126,7 +1127,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 11: خدمات الزكاة -->
+                    <!-- Card 12: خدمات الزكاة -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1178,7 +1179,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 12: خدمات منصة قوى -->
+                    <!-- Card 13: خدمات منصة قوى -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1233,7 +1234,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 13: حساب المواطن -->
+                    <!-- Card 14: حساب المواطن -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1284,7 +1285,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 14: الضمان الاجتماعي المطور -->
+                    <!-- Card 15: الضمان الاجتماعي المطور -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1337,7 +1338,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/national.png" alt="خدمات منصة مدد" class="w-full h-full object-cover">
+                                <img src="./asstes/img/national.png" alt="خدمات العنوان الوطني" class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
