--- a/index-en.html
+++ b/index-en.html
@@ -736,7 +736,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Ministry-of-Municipal-and-Rural-Affairs-01.png" alt="Municipal Services" class="w-full h-full object-cover">
+                                <img src="./asstes/img/Ministry-of-Municipal-and-Rural-Affairs-01.png" alt="Municipal Services" class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -784,7 +784,7 @@
     <div class="card-content">
         <!-- Image -->
         <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-            <img src="./asstes/img/a-guarantee.png" alt="Insurance Services" class="w-full h-full object-cover" data-localized-img="./asstes/img/insurance">
+            <img src="./asstes/img/a-guarantee.png" alt="Insurance Services" class="w-full h-full object-contain" data-localized-img="./asstes/img/insurance">
         </div>
 
         <!-- Content -->
@@ -833,7 +833,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Najiz-1.png" alt="Najiz Services" class="w-full h-full object-cover" data-localized-img="./asstes/img/Najiz">
+                                <img src="./asstes/img/Najiz-1.png" alt="Najiz Services" class="w-full h-full object-contain" data-localized-img="./asstes/img/Najiz">
                             </div>
 
                             <!-- Content -->
@@ -877,13 +877,13 @@
                         </div>
                     </div>
 
-                    <!-- Card 2: خدمات مكتب العمل -->
+                    <!-- Card 4: خدمات مكتب العمل -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
                                 <img src="./asstes/img/human-resource.png" alt="Labor Office Services"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -928,12 +928,12 @@
                         </div>
                     </div>
 
-                    <!-- Card 3: خدمات منصة مدد -->
+                    <!-- Card 5: خدمات منصة مدد -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Mudad.png" alt="Mudad Services" class="w-full h-full object-cover">
+                                <img src="./asstes/img/Mudad.png" alt="Mudad Services" class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -976,7 +976,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 4: التأمينات الاجتماعية -->
+                    <!-- Card 6: التأمينات الاجتماعية -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1027,7 +1027,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 5: خدمات الجوازات -->
+                    <!-- Card 7: خدمات الجوازات -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1078,7 +1078,7 @@
                         </div>
                     </div>
 
-<!-- Card 6: خدمات الدفاع المدني -->
+<!-- Card 8: خدمات الدفاع المدني -->
 <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
     <div class="card-content">
         <!-- Image -->
@@ -1131,13 +1131,13 @@
 
           
 
-                    <!-- Card 8: خدمات وزارة التجارة -->
+                    <!-- Card 9: خدمات وزارة التجارة -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
                                 <img src="./asstes/img/Ministry-of-Commerce-1.png" alt="Ministry of Commerce Services"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -1183,13 +1183,13 @@
                         </div>
                     </div>
 
-                    <!-- Card 9: خدمات مساند -->
+                    <!-- Card 10: خدمات مساند -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
                                 <img src="./asstes/img/Musaned- 01.png" alt="Musaned Services"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -1233,13 +1233,13 @@
                         </div>
                     </div>
 
-                    <!-- Card 10: وزارة الاستثمار -->
+                    <!-- Card 11: وزارة الاستثمار -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
                                 <img src="./asstes/img/Investment.png" alt="Ministry of Investment"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
@@ -1285,7 +1285,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 11: خدمات الزكاة -->
+                    <!-- Card 12: خدمات الزكاة -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1335,7 +1335,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 12: خدمات منصة قوى -->
+                    <!-- Card 13: خدمات منصة قوى -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1388,7 +1388,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 13: حساب المواطن -->
+                    <!-- Card 14: حساب المواطن -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1437,7 +1437,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 14: الضمان الاجتماعي المطور -->
+                    <!-- Card 15: الضمان الاجتماعي المطور -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
                         <div class="card-content">
                             <!-- Image -->
@@ -1490,7 +1490,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/national.png" alt="National Address Services" class="w-full h-full object-cover">
+                                <img src="./asstes/img/national.png" alt="National Address Services" class="w-full h-full object-contain">
                             </div>
 
                             <!-- Content -->
